# openmls-ffi

./: Cargo.toml  README.md
bindings/: openmls.swift  openmlsFFI.h  openmlsFFI.modulemap
src/: lib.rs
